--- a/app/views/appointments/index.html.haml
+++ b/app/views/appointments/index.html.haml
@@ -2,12 +2,4 @@
 
 %h2 Appointments
 
-%h3 Make a new appointment
-
-= form_for @appointment, remote: true do |f|
-  = f.text_field :title, placeholder: 'Appointment Title'
-  = f.text_field :appt_time, placeholder: 'Date and time'
-  = f.submit 'Make appointment'
-
-#appointments
-  = render 'appointments'
+= react_component('Appointments', appointments: @appointments)
