--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   width:500px;
   margin:auto;
   font-family: Arial, sans-serif;
@@ -45,4 +45,4 @@ a {
 .appointment {
   padding-top: 10px;
   border-bottom: solid 1px #ccc;
-}
+} */
